syntax = "proto3";

package proto;
import "google/protobuf/timestamp.proto";
option go_package = "github.com/dmartzol/goapi/internal/proto/proto";


message Model {
    string id = 1;
    google.protobuf.Timestamp created_time = 2;
    google.protobuf.Timestamp updated_time = 3;
}

service Accounts {
    rpc AddAccount (AddAccountMessage) returns (Account) {}
    rpc FetchAccount (AccountID) returns (Account) {}
}

message AccountID {
    string id = 1;
}

message AddAccountMessage {
    string first_name = 1;
    string last_name = 2;
    google.protobuf.Timestamp dob = 3;
    string gender = 4;
    string password = 5;
    string email = 6;
}

message Account {
    bytes id = 1;
    google.protobuf.Timestamp created_time = 2;
    google.protobuf.Timestamp updated_time = 3;
    string first_name = 4;
    string last_name = 5;
    google.protobuf.Timestamp dob = 6;
    string gender = 7;
    string pass_hash = 8;
    string email = 9;
}
