syntax = "proto3";
package templateprotos;

option go_package = "github.com/dmartzol/api-template/protos/templateprotos";
import "google/protobuf/timestamp.proto";

service Accounts {
    rpc CreateAccount (CreateAccountMessage) returns (AccountMessage) {}
    rpc Account (AccountRequest) returns (AccountMessage) {}
}

message AccountRequest {
    string id = 1;
}

message CreateAccountMessage {
    string first_name = 1;
    string last_name = 2;
    google.protobuf.Timestamp dob = 3;
    string gender = 4;
    string password = 5;
    string email = 6;
}

message AccountMessage {
    string id = 1;
    google.protobuf.Timestamp created_time = 2;
    google.protobuf.Timestamp updated_time = 3;
    string first_name = 4;
    string last_name = 5;
    google.protobuf.Timestamp dob = 6;
    string gender = 7;
    string pass_hash = 8;
    string email = 9;
}
